# rabbitmq-portable

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  main.py  mypy.ini  pyproject.toml  rabbitmq.spec
.github/workflows/: build-release.yml
