[tool.poetry]
name = "rabbitmq-portable"
version = "0.1.0"
description = "A portable binary to run rabbitmq server"
authors = ["Shivansh Bakshi <work@shivanshbakshi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.12.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
cblack = "^22.6.0"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
